--- a/css/scss/_buttons.scss
+++ b/css/scss/_buttons.scss
@@ -43,7 +43,7 @@ input:focus {
 // Add a subject as a lectruer
 .button-add {
     @extend .remove-button-style;
-    width: 100%;
+    width: 80%;
 	opacity:.8;
     border: 2px solid $uq-purple;
     background-color: white;
@@ -51,8 +51,8 @@ input:focus {
     font-weight: 600;
     font-size: 20px;
     height: 40px;
+    margin-left: 10%;
     border-radius: 15px;
-
     &:hover {
         transition: 0.7s;
         background-color: $uq-purple;
